# fractal_game

./: game.py  holomorphic_dynamics.py  pyproject.toml
