[tool.poetry]
name = "fractal-game"
version = "0.1.0"
description = ""
authors = ["Guido Mainardi <guidoluis.gm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.5.2"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
